# filonna

./: .gitignore  README.md  helpers.py  main.py  pyproject.toml  test_dirs.py
src/filonna/: __init__.py  filonna.py  helpers.py
