[project]
name = "filonna"
version = "0.1.0"
description = "CLI to manage your media library"
readme = "README.md"
authors = [
    { name = "sachin-sankar", email = "mail.sachinsankar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tmdbsimple>=2.9.1",
]

[project.scripts]
filonna = "filonna:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
